complete amazon home page clone

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     height: 60px;
     background-color: #0F1111;
     color:white;
+    display:flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 .nav-logo{
     height: 50px;
@@ -22,4 +25,156 @@
 }
 .border:hover{
     border:2px solid white;
+}
+.first-add{
+    color:#ccc;
+    font-size: 12px;
+    margin-left: 15px;
+}
+.second-add{
+    color:#fff;
+    font-size: 14px;
+    margin-left: 3px;
+}
+.address-icon{
+    display:flex;
+    align-items: center;
+}
+.navbar-search{
+    display: flex;
+    justify-content: space-evenly;
+    width:620px;
+    height:40px;
+    border-radius: 5px;
+    margin-left: 10px;
+    border: none;
+}
+.navbar-search:hover{
+    border: 2px solid rgb(236, 146, 12);
+}
+.search-select{
+    border-top-left-radius:5px;
+    border-bottom-left-radius:5px;
+    width:50px;
+    height: 41px;
+    background-color: #f3f3f3;
+    text-align: center;
+    
+}
+.serach-input{
+    width:570px;
+    font-size: 0.80rem;
+    border:none;
+}
+.search-icon{
+    width:45px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(236, 146, 12);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    color:#0F1111;
+}
+span{
+    font-size: 0.7rem;
+}
+.nav-second{
+font-size: 0.85rem;
+font-weight: 700;
+}
+.nav-cart i{
+    font-size: 30px;
+   
+}
+.nav-cart{
+    font-size: 0.85rem;
+    font-weight: 200px;
+}
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+.panel-ops p{
+    display: inline;
+    margin-left: 10px;
+    
+}
+.panel-ops{
+    width:80%;
+    font-size: 0.85rem;
+}
+.hero-section{
+    background-image: url(hero.jpg);
+    background-size:cover;
+    height: 400px; 
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.hero-msg{
+    background-color: white;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:85%;
+    margin-bottom: 95px;
+}
+.shop-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #dde5e5; 
+    
+}
+.box{
+    background-color: white;
+    height: 350px;
+    width:23%;  
+    padding:20px 0px 15px;
+    margin-top: 10px;
+}
+.box-img{
+    height: 200px;
+    background-repeat: no-repeat;
+    margin-top: 70px;
+     
+}
+.box-content{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.box-content p{
+color:#007185;
+}
+.footer-panel1{
+    background-color: #37475A;
+    color:white;
+    height:50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-panel2{
+    background-color:#232F3E;
+    color: #DDD;
+   display: flex;
+   justify-content: space-evenly;
+   font-size: 14px;
+   padding-bottom: 10px;
+}
+.footer-panel3{
+    background-color:#222F3d;
+    color: #DDD;
+    border-top: 0.5px solid white;
+    height:70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
